# MichaelBot

./: .gitignore  MysteryBox.py  README.md  beterbot.py  bot.py  discord-msg.py  makefile  pyproject.toml  requirements.txt
assets/: CustomEmoji.py
cogs/: events.py  mystery_box.py  points.py  tasks.py
scripts/: add_box_item.py  clear_db.py  update_box_db.py
utils/: clear-db.py  reformat-inv.py
