[project]
name = "michael-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "discord.py",
    "python-dotenv",
    "simple-embed-pagination",
]

[project.scripts]
bot            = "bot:main"
bot-sync       = "bot:sync"
bot-notify     = "bot:notify"
clear-db       = "scripts.clear_db:main"
add-box-item   = "scripts.add_box_item:main"
update-box-db  = "scripts.update_box_db:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
